# zen-config

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: dependabot-merge.yml  publish.yml  release.yml  test.yml
tests/: test_base.py  test_formats.py  test_loc.py  test_read.py  test_write.py
tests/schemas/: test_attrs.py  test_dataclass.py  test_dict.py  test_pydantic.py  utils.py
tests/test_files/: config_a.yaml  config_b.toml
zenconfig/: __init__.py  base.py  loc.py  read.py  write.py
zenconfig/formats/: abc.py  json.py  toml.py  yaml.py
zenconfig/schemas/: abc.py  attrs.py  dataclass.py  dict.py  pydantic.py
