[project]
name = "zenconfig"
version = "2.1.1"
description = "Simple configuration loader for python."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/zen-config" }
dependencies = [
    "typing-extensions >=4.10",
]

[project.optional-dependencies]
yaml = [ "PyYAML >=6,<7" ]
toml = [ "tomlkit >=0,<1" ]
pydantic = [ "pydantic >=1,<3" ]
attrs = [ "attrs >=22.2,<26" ]

[tool.poetry]
include = ["zenconfig/py.typed"]
requires-poetry = ">=2"

[tool.poetry.group.test.dependencies]
pytest = "==8.4.1"
pytest-mock = "==3.15.0"
ruff = "==0.12.12"
mypy = "==1.17.1"
pre-commit = "==4.3.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
